infra/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecrin
  labels:
    name: ecrin
    # Enable Cilium identity-based security
    io.cilium.k8s.policy.cluster: 'ecrin'
